# new-ufc-fighter-tracker

./: README.md  main.py  pyproject.toml  sample-config.toml
app/: browser.py  config_reader.py  db.py  metadata.py  models.py  poster.py  scraper.py  status_checker.py  tracker.py
tests/: test_poster.py
